# std_encode

./: .gitignore  .travis.yml  README.md  RELEASE_NOTES.md  pyproject.toml  tox.ini
src/se/: __init__.py  console.py
src/std_encode/: __init__.py  console.py
tests/: bad_file.t  base.t  decode_text.t  double_file.t  encode_decode_image.t  encode_decode_text.t  encode_decode_zip.t  encode_image.t  encode_text.t  setup.sh  single_file.t  test_se.py
