[tool.poetry]
name = "std_encode"
version = "0.1.0"
description = ""
authors = ["Jaime Buelta <jaime.buelta@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.6"
pytest-cram = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
std_decode = 'std_encode:run_sd'
std_encode = 'std_encode:run_se'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
