[tool.poetry]
name = "std_encode"
version = "0.1.0"
description = ""
authors = ["Jaime Buelta <jaime.buelta@gmail.com>"]

[tool.poetry.dependencies]
python = ">=2.7, !=3.0, !=3.1, !=3.2, !=3.3, !=3.4, >=3.5"
pytest-cram = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
std_decode = 'std_encode:console.run_sd'
std_encode = 'std_encode:console.run_se'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
